# tracing-forest

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: cfg.rs  lib.rs  tag.rs
src/formatter/: json.rs  mod.rs
tests/: test.rs
tracing-forest/: Cargo.toml  README.md
tracing-forest-macros/: Cargo.toml  README.md
tracing-forest-macros/src/: attribute.rs  derive.rs  lib.rs
tracing-forest/src/: builder.rs  cfg.rs  fail.rs  layer.rs  lib.rs  macros.rs  prelude.rs  processor.rs  runtime.rs  ser.rs  tag.rs  uuid.rs
tracing-forest/src/formatter/: json.rs  mod.rs  pretty.rs
tracing-forest/src/layer/: id.rs  mod.rs
tracing-forest/src/printer/: mod.rs  pretty.rs
tracing-forest/src/processor/: blocking.rs  error.rs  mod.rs  printer.rs  sync.rs
tracing-forest/src/tree/: error.rs  field.rs  mod.rs  ser.rs
tracing-forest/tests/: captured.rs  demo.rs  haunted.rs  id.rs  join_hanging_task.rs  kanidm.rs  set_global.rs  simulate_connections.rs  simulate_connections_blocking.rs  spawned_tasks.rs  tag.rs  test.rs
