[package]
name = "tracing-forest-macros"
version = "0.1.2"
authors = ["Quinn Okabayashi"]
edition = "2018"
description = "Macros for tracing-forest"
license = "MIT"
repository = "https://github.com/QnnOkabayashi/tracing-forest"

[lib]
proc-macro = true

[features]
sync = []
derive = ["syn/derive"]
attributes = []

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"

[dependencies.syn]
version = "1.0"
features = ["parsing"]

[package.metadata.docs.rs]
all-features = true