[package]
name = "tracing-forest"
version = "0.1.3"
authors = ["Quinn Okabayashi"]
edition = "2018"
description = "Preserving contextual coherence among trace data from concurrent tasks"
keywords = ["tracing", "async", "tokio", "tracing-subscriber", "tree"]
categories = [
	"asynchronous",
	"development-tools::debugging",
	"development-tools::profiling",
]
license = "MIT"
repository = "https://github.com/QnnOkabayashi/tracing-forest"

[features]
default = []
full = ["uuid", "chrono", "smallvec", "sync", "json", "derive", "attributes"]
sync = ["tokio", "tracing-forest-macros/sync"]
derive = ["tracing-forest-macros/derive"]
attributes = ["tracing-forest-macros/attributes", "tracing/attributes"]
json = ["serde", "serde_json"]
env-filter = ["tracing-subscriber/env-filter", "tracing-subscriber/std"]

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"

[dependencies.uuid]
version = "0.8"
features = ["v4", "serde", ]
optional = true

[dependencies.chrono]
version = "0.4"
optional = true

[dependencies.smallvec]
# Stores event field-value pairs on the stack if there are few enough
version = "1.7"
optional = true

[dependencies.tokio]
version = "1"
features = ["sync", "rt", "macros", "time"]
optional = true

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true

[dependencies.serde_json]
version = "1.0"
optional = true

[dependencies.tracing-forest-macros]
path = "../tracing-forest-macros"
version = "0.1.3"
optional = true

[dev-dependencies]
tracing-forest = { path = ".", features = ["full"] }
rand = "0.8.4"

[package.metadata.docs.rs]
all-features = true
